# jam

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.adoc  REFSPEC.adoc  pyproject.toml
.github/workflows/: build-and-test.yaml  build.yaml  publish-package.yaml  publish.yaml  run-tests.yaml  test-build-publish.yaml  test.yaml
jam/: __init__.py  config.py  constant.py  entry.py  error.py  log.py  merge.py  reference.py  util.py
tests/: test_merge.py  test_ref.py  test_util.py
tests/cases/: merge.yaml  reference.yaml
tests/unit/: cases.yaml  test_merge.py
