[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jam-tool"
version = "0.1.0"
dependencies = []

[project.optional-dependencies]
yaml = ['PyYAML~=6.0']
dev = ['PyYAML~=6.0', 'black>=22.6.0', 'bump2version>=1.0.1']

[project.scripts]
jam = "jam.entry:cli"

[tool.setuptools]
packages = ['jam']
